--- a/src/secondTierConfig.json
+++ b/src/secondTierConfig.json
@@ -33,24 +33,24 @@
     "REGION_LIFECYCLE": ["IPCO", "PACW", 
                 "PSCO", "SPA", "SWPP"],
 
-    "TMP_REGION": ["DE"],
+    "TMP_REGION": ["BE"],
 
     "TRAIN_TEST_PERIOD": {
         "PERIOD_0": {
             // Train - Jan 2020 - Jun 2022, Test - Jul - Dec 2022
-            "DATASET_LIMITER": 35064,
+            "DATASET_LIMITER": 26304,
             "OUT_FILE_SUFFIX": "h2_2022",
             "NUM_TEST_DAYS": 184
         },
         "PERIOD_1": {
-            // Train - Jan - Dec 2022, Test - Jan - Jun 2023
-            "DATASET_LIMITER": 39408,
+            // Train - Jan 2020 - Dec 2022, Test - Jan - Jun 2023
+            "DATASET_LIMITER": 30648,
             "OUT_FILE_SUFFIX": "h1_2023",
             "NUM_TEST_DAYS": 181
         },
         "PERIOD_2": {
             // Train - Jan 2020 - June 2023, Test - Jul - Dec 2023
-            "DATASET_LIMITER": 43824,
+            "DATASET_LIMITER": 35064,
             "OUT_FILE_SUFFIX": "h2_2023",
             "NUM_TEST_DAYS": 184
         }
@@ -402,7 +402,7 @@
         "FORECAST_IN_FILE_NAME": "../data/EU_DATA/DE/DE_96hr_forecasts_DA.csv",
         "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/EU_DATA/DE/DE_lifecycle_96hr_CI_forecasts",
         "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/EU_DATA/DE/DE_direct_96hr_CI_forecasts",
-        "NUM_FORECAST_FEATURES": 15,
+        "NUM_FORECAST_FEATURES": 15, //change to 15
         "NUM_SPECIALIZED_FORECAST_FEATURES": 10, // weather + subset of source production forecasts
         "SPECIALIZED_FORECASTS": ["nat_gas", "hydro", "solar", "wind", "biomass"]
     },
